--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url ./"
   },
-  "author": "lars"
+  "author": "lars",
+  "devDependencies": {
+    "cssnano": "^4.1.10"
+  }
 }
